# course-1141-3

./: .gitignore  README.md  pyproject.toml
src/: animate.py
src/backend/: backend.py
